Before addind buttons to inventory list

--- a/RFIDSampleApp/src/main/res/layout/activity_main.xml
+++ b/RFIDSampleApp/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="5dp"
-    tools:context=".MainActivity">
+    tools:context=".TagInventoryActivity">
         <TextView
             android:id="@+id/textrfid"
             android:layout_width="match_parent"
@@ -113,7 +113,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    tools:context=".MainActivity">
+    tools:context=".TagInventoryActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_height="wrap_content"
