--- a/RFIDSampleApp/src/main/res/layout/item_tagdata.xml
+++ b/RFIDSampleApp/src/main/res/layout/item_tagdata.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="30dp"
+    android:layout_height="50dp"
     android:orientation="horizontal">
 
 
@@ -20,4 +20,18 @@
         android:layout_gravity="center_vertical"
         android:layout_weight="0.2"
         android:text="TextView" />
+
+    <Button
+        android:id="@+id/bt_read_write"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.01"
+        android:text="R/W" />
+
+    <Button
+        android:id="@+id/bt_locate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.01"
+        android:text=">" />
 </LinearLayout>
