--- a/RFIDSampleApp/src/main/res/values/dimens.xml
+++ b/RFIDSampleApp/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <!-- Font size for locationing font -->
+    <dimen name="locationing_font_size">10sp</dimen>
 </resources>
