--- a/RFIDSampleApp/src/main/res/layout/activity_tag_locate.xml
+++ b/RFIDSampleApp/src/main/res/layout/activity_tag_locate.xml
@@ -1,9 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_margin="5dp"
+    android:orientation="vertical"
     tools:context=".TagLocateActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/tvEPC"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Tag EPC" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/textrfid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="RFID Status: " />
+
+
+    <TextView
+        android:id="@+id/textViewStatusrfid"
+        android:layout_below="@+id/textrfid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:text="" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="90"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
+
+        <com.zebra.rfid.demo.sdksample.RangeGraph
+            android:id="@+id/rgLocationBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine"
+            android:gravity="center" />
+
+
+    </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabtn_locate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:layout_margin="@dimen/fab_margin"
+        android:onClick="locationingButtonClicked"
+        app:backgroundTint="#0066ff"
+        app:srcCompat="@android:drawable/ic_media_play" />
+</LinearLayout>
