--- a/RFIDSampleApp/src/main/res/layout/activity_main.xml
+++ b/RFIDSampleApp/src/main/res/layout/activity_main.xml
@@ -21,13 +21,18 @@
             android:layout_marginLeft="5dp"
             android:text="" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0.5dp"
+        android:layout_below="@+id/textViewStatusrfid"
+        android:orientation="vertical"
+        android:id="@+id/layout">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="0.5dp"
-            android:layout_below="@+id/textViewStatusrfid"
-            android:orientation="horizontal"
-            android:id="@+id/layout">
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/TestButton"
@@ -54,6 +59,7 @@
 
         </LinearLayout>
 
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_results"
