--- a/RFIDSampleApp/src/main/res/values/colors.xml
+++ b/RFIDSampleApp/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="zebra_blue">#0073E6</color>
-    <color name="zebra_dark_blue">#0054A8</color>
+    <color name="zebra_dark_blue">#003D7A</color>
 </resources>
