--- a/RFIDSampleApp/src/main/res/values/styles.xml
+++ b/RFIDSampleApp/src/main/res/values/styles.xml
@@ -12,5 +12,12 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="actionBarTheme">@style/CustomActionBarTheme</item>
+
+    </style>
+
+    <!-- Custom theme for the action bar -->
+    <style name="CustomActionBarTheme" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:textColorPrimary">@android:color/white</item>
     </style>
 </resources>
