--- a/RFIDSampleApp/src/main/res/layout/activity_splash.xml
+++ b/RFIDSampleApp/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/material_dynamic_neutral40"
+    android:background="@color/zebra_blue"
     tools:context=".SplashActivity">
 
     <ImageView
