--- a/RFIDSampleApp/src/main/res/layout/activity_main.xml
+++ b/RFIDSampleApp/src/main/res/layout/activity_main.xml
@@ -91,6 +91,16 @@
                 android:text="Export TXT"
                 android:textSize="10sp" />
 
+            <Button
+                android:id="@+id/btShareTo"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="5dp"
+                android:onClick="shareTo"
+                android:textSize="10sp"
+                android:text="Share To" />
+
         </LinearLayout>
 
     </LinearLayout>
