--- a/RFIDSampleApp/src/main/res/layout/activity_tag_user_memory_read.xml
+++ b/RFIDSampleApp/src/main/res/layout/activity_tag_user_memory_read.xml
@@ -8,6 +8,7 @@
 
     <LinearLayout
         android:id="@+id/llTopLayout"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
