--- a/RFIDSampleApp/src/main/res/menu/menu_main.xml
+++ b/RFIDSampleApp/src/main/res/menu/menu_main.xml
@@ -19,5 +19,15 @@
         android:title="@string/Defaults"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/Connect"
+        android:title="Connect Reader"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/Disconnect"
+        android:title="Disconnect Reader"
+        app:showAsAction="never" />
+
 
 </menu>
