--- a/RFIDSampleApp/src/main/res/layout/activity_scanner.xml
+++ b/RFIDSampleApp/src/main/res/layout/activity_scanner.xml
@@ -27,7 +27,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginBottom="1dp">
 
-        <EditText
+        <TextView
             android:id="@+id/et_ScannerActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
