--- a/RFIDSampleApp/src/main/res/layout/item_tagdata.xml
+++ b/RFIDSampleApp/src/main/res/layout/item_tagdata.xml
@@ -28,4 +28,12 @@
         android:layout_weight="0.01"
         android:text="Loc"
         android:textSize="10sp" />
+
+    <Button
+        android:id="@+id/bt_write"
+        android:layout_width="55dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.01"
+        android:text="R/W"
+        android:textSize="10sp" />
 </LinearLayout>
