--- a/RFIDSampleApp/src/main/res/layout/item_tagdata.xml
+++ b/RFIDSampleApp/src/main/res/layout/item_tagdata.xml
@@ -1,39 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
 
 
-    <TextView
-        android:id="@+id/tv_epc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="0.8"
-        android:text="TextView" />
+        <TextView
+            android:id="@+id/tv_epc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.8"
+            android:text="TextView" />
 
-    <TextView
-        android:id="@+id/tv_rssi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="0.2"
-        android:text="TextView" />
+        <TextView
+            android:id="@+id/tv_rssi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.2"
+            android:text="TextView" />
 
-    <Button
-        android:id="@+id/bt_locate"
-        android:layout_width="55dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.01"
-        android:text="Loc"
-        android:textSize="10sp" />
+        <Button
+            android:id="@+id/bt_locate"
+            android:layout_width="55dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.01"
+            android:text="Loc"
+            android:textSize="10sp" />
 
-    <Button
-        android:id="@+id/bt_write"
-        android:layout_width="55dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.01"
-        android:text="R/W"
-        android:textSize="10sp" />
+        <Button
+            android:id="@+id/bt_write"
+            android:layout_width="55dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.01"
+            android:text="R/W"
+            android:textSize="10sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_userBank"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_userBank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.8"
+            android:text="TextView" />
+
+        <Button
+            android:id="@+id/bt_copy"
+            android:layout_width="55dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1"
+            android:text="Copy"
+            android:textSize="10sp" />
+
+    </LinearLayout>
 </LinearLayout>
