--- a/RFIDSampleApp/src/main/res/layout/activity_epc_write.xml
+++ b/RFIDSampleApp/src/main/res/layout/activity_epc_write.xml
@@ -34,25 +34,11 @@
                 android:text="TextView" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tvUserMemory"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/bt_readTag"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Read Tag" />
 
             <Button
                 android:id="@+id/btWriteATag"
@@ -61,12 +47,6 @@
                 android:layout_weight="1"
                 android:text="Write Tag" />
 
-            <Button
-                android:id="@+id/btClear"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Clear Tag" />
         </LinearLayout>
 
         <Button
@@ -76,19 +56,21 @@
             android:layout_weight="1"
             android:text="DataWedge Scan" />
 
-        <Button
-            android:id="@+id/bt_clearbarcodes"
+        <EditText
+            android:id="@+id/et_NewEPC"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Clear Barcodes" />
+            android:hint="Enter new EPC here or scan it"
+        />
 
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvBarcodesList"
+    <TextView
+        android:id="@+id/tv_status"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/llTopLayout"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/llTopLayout" />
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
