--- a/RFIDSampleApp/src/main/res/layout/activity_main.xml
+++ b/RFIDSampleApp/src/main/res/layout/activity_main.xml
@@ -22,10 +22,38 @@
             android:text="" />
 
     <LinearLayout
+        android:id="@+id/layoutMinRSSI"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewStatusrfid"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp">
+
+        <SeekBar
+            android:id="@+id/minRSSI"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:max="200"
+            android:progress="170" />
+
+        <TextView
+            android:id="@+id/tvMinRSSIValue"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.3"
+            android:gravity="center"
+            android:text="-30" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="0.5dp"
-        android:layout_below="@+id/textViewStatusrfid"
+        android:layout_below="@+id/layoutMinRSSI"
         android:orientation="vertical"
         android:id="@+id/layout">
 
