--- a/RFIDSampleApp/src/main/res/layout/activity_main.xml
+++ b/RFIDSampleApp/src/main/res/layout/activity_main.xml
@@ -31,11 +31,18 @@
         android:paddingLeft="5dp"
         android:paddingRight="5dp">
 
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1"
+            android:text="Min RSSI" />
+
         <SeekBar
             android:id="@+id/minRSSI"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.7"
+            android:layout_weight="0.8"
             android:max="200"
             android:progress="170" />
 
@@ -43,9 +50,44 @@
             android:id="@+id/tvMinRSSIValue"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.3"
+            android:layout_weight="0.1"
             android:gravity="center"
             android:text="-30" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layoutAntennaPower"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/layoutMinRSSI"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp">
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1"
+            android:text="A Power" />
+
+        <SeekBar
+            android:id="@+id/antennaPower"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.8"
+            android:max="260"
+            android:progress="260" />
+
+        <TextView
+            android:id="@+id/tvAntennaPowerValue"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1"
+            android:gravity="center"
+            android:text="270" />
 
     </LinearLayout>
 
@@ -53,7 +95,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="0.5dp"
-        android:layout_below="@+id/layoutMinRSSI"
+        android:layout_below="@+id/layoutAntennaPower"
         android:orientation="vertical"
         android:id="@+id/layout">
 
